Add org and team to subscription table and middleware for entityuser
