# docs/swagger/swagger.yaml
@@ -213,6 +213,8 @@ definitions:
         type: boolean
       sessionId:
         type: string
+      subscribed:
+        type: boolean
       user:
         $ref: '#/definitions/thunderdome.User'
     type: object
@@ -348,7 +350,11 @@ definitions:
         type: string
       expires:
         type: string
+      organization_id:
+        type: string
       subscription_id:
+        type: string
+      team_id:
         type: string
       type:
         enum:
@@ -1066,7 +1072,11 @@ definitions:
         type: string
       id:
         type: string
+      organization_id:
+        type: string
       subscription_id:
+        type: string
+      team_id:
         type: string
       type:
         type: string
@@ -1175,8 +1185,6 @@ definitions:
         type: boolean
       rank:
         type: string
-      subscribed:
-        type: boolean
       theme:
         type: string
       updatedDate:
@@ -5915,6 +5923,32 @@ paths:
       summary: Create Storyboard
       tags:
       - storyboard
+  /users/{userId}/subscriptions:
+    get:
+      description: get list of active entity user subscriptions
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            allOf:
+            - $ref: '#/definitions/http.standardJsonResponse'
+            - properties:
+                data:
+                  items:
+                    $ref: '#/definitions/thunderdome.Subscription'
+                  type: array
+              type: object
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/http.standardJsonResponse'
+      security:
+      - ApiKeyAuth: []
+      summary: Get Active Entity User Subscriptions
+      tags:
+      - subscription
   /users/{userId}/teams:
     get:
       description: Get a list of teams the user is a part of
